--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html id="html">
 
 <head>
   <meta charset="utf-8" />
@@ -16,51 +16,160 @@
 
   <!-- Custom CSS -->
   <link rel="stylesheet" href="index.css">
-  
+
 </head>
 
-<body>
-  <!-- Navigationsleiste -->
-  <nav id="nav-main" class="navbar navbar-expand-lg">
-    <div id="nav-container" class="container">
+<body class="bg">
+  <div id="container">
 
-      <div class="floatLeft">
+    <!-- Navigationsleiste -->
+    <nav id="nav-main" class="navbar navbar-expand-lg">
+      <div id="nav-container" class="container">
 
-        <a class="navbar-brand" href="#">
-          <i class="fas fa-gamepad fa-3x"></i>
-        </a>
+        <div class="floatLeft">
 
-      </div>
+          <a class="navbar-brand" href="#">
+            <i class="fas fa-gamepad fa-3x"></i>
+          </a>
 
-      <div class="floatRight">
-
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <i class="fas fa-bars"></i>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Games<span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Sign in</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Register</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Impressum</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Kontakt</a>
-            </li>
-          </ul>
         </div>
 
-      </div>
-    </div>
-  </nav>
+        <div class="floatRight">
 
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <i class="fas fa-bars"></i>
+          </button>
+
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item active">
+                <a class="nav-link" href="#">Games<span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Sign in</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Register</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Impressum</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Kontakt</a>
+              </li>
+            </ul>
+          </div>
+
+        </div>
+      </div>
+    </nav>
+    <main id="body">
+      <div #cardContainer class="container">
+        <div class="row">
+          <div class="col-sm-12 col-md-6 col-lg-4 p-4">
+
+            <div class="karte">
+              <h1>Snake</h1>
+
+              <!-- Karussell mit großen Screenshots -->
+              <section class="container">
+                <div id="carousel-snake" class="carousel slide" data-ride="carousel">
+                  <ol class="carousel-indicators">
+                    <li data-target="#carousel-snake" data-slide-to="0" class="active"></li>
+                    <li data-target="#carousel-snake" data-slide-to="1"></li>
+                    <li data-target="#carousel-snake" data-slide-to="2"></li>
+                  </ol>
+                  <div class="carousel-inner">
+                    <div class="carousel-item active">
+                      <img class="d-block w-100" src="vorschaubilder/SnakeVorschau0.png" alt="Snake small">
+                    </div>
+                    <div class="carousel-item">
+                      <img class="d-block w-100" src="vorschaubilder/SnakeVorschau1.png" alt="Snake medium">
+                    </div>
+                    <div class="carousel-item">
+                      <img class="d-block w-100" src="vorschaubilder/SnakeVorschau2.png" alt="Snake big">
+                    </div>
+                  </div>
+                </div>
+              </section>
+
+              <p>Spiele den Klassiker Snake und sammle Apfel um zu wachsen.</p>
+
+            </div>
+
+          </div>
+          <div class="col-sm-12 col-md-6 col-lg-4 p-4">
+
+            <div class="karte">
+              <h1>Spiel 2</h1>
+
+              <!-- Karussell mit großen Screenshots -->
+              <section class="container">
+                <div id="carousel-snake" class="carousel slide" data-ride="carousel">
+                  <ol class="carousel-indicators">
+                    <li data-target="#carousel-snake" data-slide-to="0" class="active"></li>
+                    <li data-target="#carousel-snake" data-slide-to="1"></li>
+                    <li data-target="#carousel-snake" data-slide-to="2"></li>
+                  </ol>
+                  <div class="carousel-inner">
+                    <div class="carousel-item active">
+                      <img class="d-block w-100" src="vorschaubilder/SnakeVorschau0.png" alt="Snake small">
+                    </div>
+                    <div class="carousel-item">
+                      <img class="d-block w-100" src="vorschaubilder/SnakeVorschau1.png" alt="Snake medium">
+                    </div>
+                    <div class="carousel-item">
+                      <img class="d-block w-100" src="vorschaubilder/SnakeVorschau2.png" alt="Snake big">
+                    </div>
+                  </div>
+                </div>
+              </section>
+
+              <p>Spiele den Klassiker Snake und sammle Apfel um zu wachsen.</p>
+            </div>
+
+          </div>
+          <div class="col-sm-12 col-md-6 col-lg-4 p-4">
+
+            <div class="karte">
+              <h1>Spiel 3</h1>
+
+              <!-- Karussell mit großen Screenshots -->
+              <section class="container">
+                <div id="carousel-snake" class="carousel slide" data-ride="carousel">
+                  <ol class="carousel-indicators">
+                    <li data-target="#carousel-snake" data-slide-to="0" class="active"></li>
+                    <li data-target="#carousel-snake" data-slide-to="1"></li>
+                    <li data-target="#carousel-snake" data-slide-to="2"></li>
+                  </ol>
+                  <div class="carousel-inner">
+                    <div class="carousel-item active">
+                      <img class="d-block w-100" src="vorschaubilder/SnakeVorschau0.png" alt="Snake small">
+                    </div>
+                    <div class="carousel-item">
+                      <img class="d-block w-100" src="vorschaubilder/SnakeVorschau1.png" alt="Snake medium">
+                    </div>
+                    <div class="carousel-item">
+                      <img class="d-block w-100" src="vorschaubilder/SnakeVorschau2.png" alt="Snake big">
+                    </div>
+                  </div>
+                </div>
+              </section>
+
+              <p>Spiele den Klassiker Snake und sammle Apfel um zu wachsen.</p>
+
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </main>
+
+    <footer id="footer">
+      Dieses Werk ist lizenziert unter einer <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Namensnennung 4.0 International Lizenz</a>
+    </footer>
+
+  </div>
 </body>
+
 </html>
