Kommentare in index.html ergänzt

--- a/index.html
+++ b/index.html
@@ -165,8 +165,11 @@
       </div>
     </main>
 
-    <footer id="footer">
-      Dieses Werk ist lizenziert unter einer <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Namensnennung 4.0 International Lizenz</a>
+    <!-- Fußleiste mit License-Eintrag -->
+    <footer>
+      <div id="footer">
+        Dieses Werk ist lizenziert unter einer <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Namensnennung 4.0 International Lizenz</a>
+      </div>
     </footer>
 
   </div>
