--- a/snake.html
+++ b/snake.html
@@ -14,6 +14,9 @@
   <!-- custom CSS -->
   <link rel="stylesheet" href="snake.css">
 
+  <!--- custom JavaScript-->
+  <script src="snake.js"></script>
+
 </head>
 
 <body>
@@ -66,6 +69,11 @@
       <div class="row">
         <div class="col-12">
           <img id="snakePreStart" src="img/snakePreStart.png" alt="Snake Picture">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12">
+          <canvas id="canvasSnake" width="600" height="600"></canvas>
         </div>
       </div>
     </div>
