--- a/snake.html
+++ b/snake.html
@@ -14,6 +14,9 @@
   <!-- custom CSS -->
   <link rel="stylesheet" href="snake.css">
 
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+
   <!--- custom JavaScript-->
   <script src="snake.js"></script>
 
@@ -24,12 +27,17 @@
     <div class="container">
       <div class="row">
         <div class="col-6">
-          <h1>Snake</h1>
+          <span>
+            <a class="navbar-brand" href="index.html">
+              <i id="controller" class="fas fa-gamepad fa-2x"></i>
+            </a>
+            <h1 id="ueberschrift">Snake</h1>
+          </span>
         </div>
         <div class="col-2">
         </div>
         <div class="col-1">
-          <h2>Länge: </h2>
+          <h2 id="laengeSchrift">Länge: </h2>
         </div>
         <div class="col-1">
         </div>
