--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                   </ol>
                   <div class="carousel-inner">
                     <div class="carousel-item active">
-                      <img class="d-block w-100" src="vorschaubilder/SnakeVorschau0.png" alt="Snake small">
+                      <a href="snakeBunt.html"><img class="d-block w-100" src="vorschaubilder/SnakeVorschau0.png" alt="Snake small"></a>
                     </div>
                     <div class="carousel-item">
                       <img class="d-block w-100" src="vorschaubilder/SnakeVorschau1.png" alt="Snake medium">
@@ -144,7 +144,7 @@
                   </ol>
                   <div class="carousel-inner">
                     <div class="carousel-item active">
-                      <img class="d-block w-100" src="vorschaubilder/SnakeVorschau0.png" alt="Snake small">
+                      <a href="snakeMulti.html"><img class="d-block w-100" src="vorschaubilder/SnakeVorschau0.png" alt="Snake small"></a>
                     </div>
                     <div class="carousel-item">
                       <img class="d-block w-100" src="vorschaubilder/SnakeVorschau1.png" alt="Snake medium">
