--- a/snake.html
+++ b/snake.html
@@ -22,7 +22,7 @@
 
 </head>
 
-<body>
+<body class="bg">
   <header>
     <div class="container">
       <div class="row">
@@ -72,21 +72,17 @@
       </div>
     </div>
   </header>
-  <main>
-    <div class="container">
-      <div class="row">
-        <div class="col-12">
-          <img id="snakePreStart" src="img/snakePreStart.png" alt="Snake Picture">
+  <div id="background">
+    <main>
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <canvas id="canvasSnake" width="600" height="600"></canvas>
+          </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-12">
-          <canvas id="canvasSnake" width="600" height="600"></canvas>
-        </div>
-      </div>
-    </div>
-  </main>
-
+    </main>
+  <div>
 </body>
 
 </html>
