--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
                       <a href="snake.html"><img class="d-block w-100" src="vorschaubilder/SnakeVorschau0.png" alt="Snake small"></a>
                     </div>
                     <div class="carousel-item">
-                      <img class="d-block w-100" src="vorschaubilder/SnakeVorschau1.png" alt="Snake medium">
+                      <a href="snake.html"><img class="d-block w-100" src="vorschaubilder/SnakeVorschau1.png" alt="Snake medium"></a>
                     </div>
                     <div class="carousel-item">
-                      <img class="d-block w-100" src="vorschaubilder/SnakeVorschau2.png" alt="Snake big">
+                      <a href="snake.html"><img class="d-block w-100" src="vorschaubilder/SnakeVorschau2.png" alt="Snake big"></a>
                     </div>
                   </div>
                 </div>
@@ -118,16 +118,16 @@
                       <a href="snakeColour.html"><img class="d-block w-100" src="vorschaubilder/SnakeColour0.png" alt="Snake small"></a>
                     </div>
                     <div class="carousel-item">
-                      <img class="d-block w-100" src="vorschaubilder/SnakeColour1.png" alt="Snake medium">
+                      <a href="snakeColour.html"><img class="d-block w-100" src="vorschaubilder/SnakeColour1.png" alt="Snake medium"></a>
                     </div>
                     <div class="carousel-item">
-                      <img class="d-block w-100" src="vorschaubilder/SnakeColour2.png" alt="Snake big">
+                      <a href="snakeColour.html"><img class="d-block w-100" src="vorschaubilder/SnakeColour2.png" alt="Snake big"></a>
                     </div>
                   </div>
                 </div>
               </section>
 
-              <p>Snake Colour bringt durch bunte flackernden Farben jede mege Pepp ins triste Snake Classic.</p>
+              <p>Snake Colour bringt durch bunte flackernden Farben jede menge Pepp ins triste Snake Classic.</p>
             </div>
 
           </div>
@@ -150,10 +150,10 @@
                       <a href="snakeMulti.html"><img class="d-block w-100" src="vorschaubilder/SnakeMulti0.png" alt="Snake small"></a>
                     </div>
                     <div class="carousel-item">
-                      <img class="d-block w-100" src="vorschaubilder/SnakeMulti1.png" alt="Snake medium">
+                      <a href="snakeMulti.html"><img class="d-block w-100" src="vorschaubilder/SnakeMulti1.png" alt="Snake medium"></a>
                     </div>
                     <div class="carousel-item">
-                      <img class="d-block w-100" src="vorschaubilder/SnakeMulti2.png" alt="Snake big">
+                      <a href="snakeMulti.html"><img class="d-block w-100" src="vorschaubilder/SnakeMulti2.png" alt="Snake big"></a>
                     </div>
                   </div>
                 </div>
