--- a/snakeColour.html
+++ b/snakeColour.html
@@ -24,12 +24,12 @@
 
 <body class="bg">
   <header>
-    <div class="container">
+    <div id="containerHeader" class="container">
       <div class="row">
         <div class="col-6">
           <span>
             <a class="navbar-brand" href="index.html">
-              <i id="controller" class="fas fa-gamepad fa-2x"></i>
+              <i id="controller" class="fas fa-gamepad fa-3x"></i>
             </a>
             <h1 id="ueberschrift">Snake Colour</h1>
           </span>
@@ -73,7 +73,7 @@
     </div>
   </header>
   <main>
-    <div class="container">
+    <div id="containerMain" class="container">
       <div class="row">
         <div class="col-12">
           <img id="snakePreStart" src="img/snakePreStart.png" alt="Snake Picture">
