--- a/snakeMulti.html
+++ b/snakeMulti.html
@@ -22,16 +22,16 @@
 
 </head>
 
-<body>
+<body class="bg">
   <header>
-    <div class="container">
+    <div id="containerHeader" class="container">
       <div class="row">
         <div class="col-6">
           <span>
             <a class="navbar-brand" href="index.html">
-              <i id="controller" class="fas fa-gamepad fa-2x"></i>
+              <i id="controller" class="fas fa-gamepad fa-3x"></i>
             </a>
-            <h1 id="ueberschrift">Snake</h1>
+            <h1 id="ueberschrift">Snake Multiplayer</h1>
           </span>
         </div>
         <div class="col-1">
@@ -77,7 +77,12 @@
     </div>
   </header>
   <main>
-    <div class="container">
+    <div id="containerMain" class="container">
+      <div class="row">
+        <div class="col-12">
+          <img id="snakePreStart" src="img/snakePreStart.png" alt="Snake Picture">
+        </div>
+      </div>
       <div class="row">
         <div class="col-12">
           <canvas id="canvasSnake" width="600" height="600"></canvas>
@@ -85,7 +90,6 @@
       </div>
     </div>
   </main>
-
 </body>
 
 </html>
