--- a/snakeMulti.html
+++ b/snakeMulti.html
@@ -36,8 +36,10 @@
         </div>
         <div class="col-1">
         </div>
-        <div class="col-3">
-          <h3 id="laengeSchriftGruen">Länge grün: </h3>
+        <div class="col-1">
+        </div>        
+        <div class="col-2">
+          <h3 id="laengeSchriftGruen">Spieler 1: </h3>
         </div>
         <div class="col-1">
           <h3 id="laenge"></h3>
@@ -50,22 +52,20 @@
           <input id="start" type="button" name="start" value="start" style="display:inline">
           <input id="stopp" type="button" name="stopp" value="stopp" style="display:none">
         </div>
-        <div class="col-1">
-          <p id="h1Schrift">Highscore: </p>
+        <div class="col-2">
+          <p id="h1Schrift">Highscore 1: </p>
         </div>
         <div class="col-1">
           <p id="h1" class="highscore"></p>
         </div>
-        <div class="col-1">
-          <p id="h2Schrift">Highscore: </p>
+        <div class="col-2">
+          <p id="h2Schrift">Highscore 2: </p>
         </div>
         <div class="col-1">
           <p id="h2" class="highscore2"></p>
         </div>
-        <div class="col-1">
-        </div>
-        <div class="col-3">
-          <h3 id="laengeSchriftOrange">Länge orange:</h3>
+        <div class="col-2">
+          <h3 id="laengeSchriftOrange">Spieler 2:</h3>
         </div>
         <div class="col-1">
           <h3 id="laenge2"></h3>
