Ergänzungen und Fehlerbehebungen.

--- a/snakeMulti.html
+++ b/snakeMulti.html
@@ -37,7 +37,7 @@
         <div class="col-1">
         </div>
         <div class="col-1">
-        </div>        
+        </div>
         <div class="col-2">
           <h3 id="laengeSchriftGruen">Spieler 1: </h3>
         </div>
@@ -50,7 +50,7 @@
       <div class="row">
         <div class="col-2">
           <input id="start" type="button" name="start" value="start" style="display:inline">
-          <input id="stopp" type="button" name="stopp" value="stopp" style="display:none">
+          <input id="stop" type="button" name="stop" value="stop" style="display:none">
         </div>
         <div class="col-2">
           <p id="h1Schrift">Highscore 1: </p>
