--- a/snake.html
+++ b/snake.html
@@ -50,7 +50,7 @@
       <div class="row">
         <div class="col-2">
           <input id="start" type="button" name="start" value="start" style="display:inline">
-          <input id="stopp" type="button" name="stopp" value="stopp" style="display:none">
+          <input id="stop" type="button" name="stop" value="stop" style="display:none">
         </div>
         <div class="col-2">
           <input id="plus" type="button" name="schneller" value="schneller">
