Fehlerbehebung: Gestaltung der Seite(n)/Spiele. Unsichtbar machen des Canvas Elements

--- a/snake.html
+++ b/snake.html
@@ -29,7 +29,7 @@
         <div class="col-6">
           <span>
             <a class="navbar-brand" href="index.html">
-              <i id="controller" class="fas fa-gamepad fa-3x"></i>
+              <i id="controller" class="fas fa-gamepad fa-2x"></i>
             </a>
             <h1 id="ueberschrift">Snake Classic</h1>
           </span>
@@ -81,8 +81,8 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-12">
-            <canvas id="canvasSnake" width="600" height="600"></canvas>
+          <div id="canvasParent" class="col-12">
+            <canvas id="canvasSnake" width="600" height="600" style="display:none"></canvas>
           </div>
         </div>
       </div>
