--- a/snakeMulti.html
+++ b/snakeMulti.html
@@ -29,7 +29,7 @@
         <div class="col-6">
           <span>
             <a class="navbar-brand" href="index.html">
-              <i id="controller" class="fas fa-gamepad fa-3x"></i>
+              <i id="controller" class="fas fa-gamepad fa-2x"></i>
             </a>
             <h1 id="ueberschrift">Snake Multiplayer</h1>
           </span>
@@ -85,7 +85,7 @@
       </div>
       <div class="row">
         <div class="col-12">
-          <canvas id="canvasSnake" width="600" height="600"></canvas>
+          <canvas id="canvasSnake" width="600" height="600" style="display:none"></canvas>
         </div>
       </div>
     </div>
