Hinzufügen von einer Spielzeit (5 Minuten) beim MultiplayerSpiel und ermittlung des Gewinners. Je nach Gewinner wird ein anderes Bild dargestellt, wer gewonnen hat.

--- a/snakeMulti.html
+++ b/snakeMulti.html
@@ -71,7 +71,9 @@
           <h3 id="laenge2"></h3>
         </div>
         <div class="col-1">
-          <img id="apples" src="img/apple.png" alt="Apples">
+          <div id="zeitcontainer">
+            <h3 id="zeit"></h3>
+          </div>
         </div>
       </div>
     </div>
@@ -86,6 +88,21 @@
       <div class="row">
         <div class="col-12">
           <canvas id="canvasSnake" width="600" height="600" style="display:none"></canvas>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12">
+          <img id="gewinner1" src="img/gewinner1.png" alt="Bild Gewinner1" style="display:none">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12">
+          <img id="gewinner2" src="img/gewinner2.png" alt="Bild Gewinner2" style="display:none">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12">
+          <img id="unentschieden" src="img/unentschieden.png" alt="Bild unentschieden" style="display:none">
         </div>
       </div>
     </div>
