--- a/index.html
+++ b/index.html
@@ -68,100 +68,107 @@
         <div class="row">
           <div class="col-sm-12 col-md-6 col-lg-4 p-4">
 
-            <div class="karte">
-              <h1>Snake</h1>
-              <h4>Classic</h4>
+            <a id="link1" href="snake.html">
+              <div class="karte">
+                <h1>Snake</h1>
+                <h4>Classic</h4>
 
-              <!-- Karussell mit großen Screenshots -->
-              <section class="container">
-                <div id="carousel-snake" class="carousel slide" data-ride="carousel">
-                  <ol class="carousel-indicators">
-                    <li data-target="#carousel-snake" data-slide-to="0" class="active"></li>
-                    <li data-target="#carousel-snake" data-slide-to="1"></li>
-                    <li data-target="#carousel-snake" data-slide-to="2"></li>
-                  </ol>
-                  <div class="carousel-inner">
-                    <div class="carousel-item active">
-                      <a href="snake.html"><img class="d-block w-100" src="vorschaubilder/SnakeVorschau0.png" alt="Snake small"></a>
-                    </div>
-                    <div class="carousel-item">
-                      <a href="snake.html"><img class="d-block w-100" src="vorschaubilder/SnakeVorschau1.png" alt="Snake medium"></a>
-                    </div>
-                    <div class="carousel-item">
-                      <a href="snake.html"><img class="d-block w-100" src="vorschaubilder/SnakeVorschau2.png" alt="Snake big"></a>
+                <!-- Karussell mit großen Screenshots -->
+                <section class="container">
+                  <div id="carousel-snake" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                      <li data-target="#carousel-snake" data-slide-to="0" class="active"></li>
+                      <li data-target="#carousel-snake" data-slide-to="1"></li>
+                      <li data-target="#carousel-snake" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img class="d-block w-100" src="vorschaubilder/SnakeVorschau0.png" alt="Snake small">
+                      </div>
+                      <div class="carousel-item">
+                        <img class="d-block w-100" src="vorschaubilder/SnakeVorschau1.png" alt="Snake medium">
+                      </div>
+                      <div class="carousel-item">
+                        <img class="d-block w-100" src="vorschaubilder/SnakeVorschau2.png" alt="Snake big">
+                      </div>
                     </div>
                   </div>
-                </div>
-              </section>
+                </section>
 
-              <p>Spiele den Klassiker Snake und sammle Äpfel und wachse zur längsten Schlange der Welt heran.</p>
 
-            </div>
+                <p>Spiele den Klassiker Snake und sammle Äpfel und wachse zur längsten Schlange der Welt heran.</p>
+
+              </div>
+            </a>
 
           </div>
           <div class="col-sm-12 col-md-6 col-lg-4 p-4">
 
-            <div class="karte">
-              <h1>Snake</h1>
-              <h4>Colour</h4>
+            <a id="link2" href="snakeColour.html">
+              <div class="karte">
+                <h1>Snake</h1>
+                <h4>Colour</h4>
 
-              <!-- Karussell mit großen Screenshots -->
-              <section class="container">
-                <div id="carousel-snake" class="carousel slide" data-ride="carousel">
-                  <ol class="carousel-indicators">
-                    <li data-target="#carousel-snake" data-slide-to="0" class="active"></li>
-                    <li data-target="#carousel-snake" data-slide-to="1"></li>
-                    <li data-target="#carousel-snake" data-slide-to="2"></li>
-                  </ol>
-                  <div class="carousel-inner">
-                    <div class="carousel-item active">
-                      <a href="snakeColour.html"><img class="d-block w-100" src="vorschaubilder/SnakeColour0.png" alt="Snake small"></a>
-                    </div>
-                    <div class="carousel-item">
-                      <a href="snakeColour.html"><img class="d-block w-100" src="vorschaubilder/SnakeColour1.png" alt="Snake medium"></a>
-                    </div>
-                    <div class="carousel-item">
-                      <a href="snakeColour.html"><img class="d-block w-100" src="vorschaubilder/SnakeColour2.png" alt="Snake big"></a>
+                <!-- Karussell mit großen Screenshots -->
+                <section class="container">
+                  <div id="carousel-snake" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                      <li data-target="#carousel-snake" data-slide-to="0" class="active"></li>
+                      <li data-target="#carousel-snake" data-slide-to="1"></li>
+                      <li data-target="#carousel-snake" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img class="d-block w-100" src="vorschaubilder/SnakeColour0.png" alt="Snake small">
+                      </div>
+                      <div class="carousel-item">
+                        <img class="d-block w-100" src="vorschaubilder/SnakeColour1.png" alt="Snake medium">
+                      </div>
+                      <div class="carousel-item">
+                        <img class="d-block w-100" src="vorschaubilder/SnakeColour2.png" alt="Snake big">
+                      </div>
                     </div>
                   </div>
-                </div>
-              </section>
+                </section>
 
-              <p>Snake Colour bringt durch bunte flackernden Farben jede menge Pepp ins triste Snake Classic.</p>
-            </div>
+                <p>Snake Colour bringt durch bunte flackernden Farben jede menge Pepp ins triste Snake Classic.</p>
+              </div>
+            </a>
 
           </div>
           <div class="col-sm-12 col-md-6 col-lg-4 p-4">
 
-            <div class="karte">
-              <h1>Snake</h1>
-              <h4>Multiplayer</h4>
+            <a id="link3" href="snakeMulti.html">
+              <div class="karte">
+                <h1>Snake</h1>
+                <h4>Multiplayer</h4>
 
-              <!-- Karussell mit großen Screenshots -->
-              <section class="container">
-                <div id="carousel-snake" class="carousel slide" data-ride="carousel">
-                  <ol class="carousel-indicators">
-                    <li data-target="#carousel-snake" data-slide-to="0" class="active"></li>
-                    <li data-target="#carousel-snake" data-slide-to="1"></li>
-                    <li data-target="#carousel-snake" data-slide-to="2"></li>
-                  </ol>
-                  <div class="carousel-inner">
-                    <div class="carousel-item active">
-                      <a href="snakeMulti.html"><img class="d-block w-100" src="vorschaubilder/SnakeMulti0.png" alt="Snake small"></a>
-                    </div>
-                    <div class="carousel-item">
-                      <a href="snakeMulti.html"><img class="d-block w-100" src="vorschaubilder/SnakeMulti1.png" alt="Snake medium"></a>
-                    </div>
-                    <div class="carousel-item">
-                      <a href="snakeMulti.html"><img class="d-block w-100" src="vorschaubilder/SnakeMulti2.png" alt="Snake big"></a>
+                <!-- Karussell mit großen Screenshots -->
+                <section class="container">
+                  <div id="carousel-snake" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                      <li data-target="#carousel-snake" data-slide-to="0" class="active"></li>
+                      <li data-target="#carousel-snake" data-slide-to="1"></li>
+                      <li data-target="#carousel-snake" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img class="d-block w-100" src="vorschaubilder/SnakeMulti0.png" alt="Snake small">
+                      </div>
+                      <div class="carousel-item">
+                        <img class="d-block w-100" src="vorschaubilder/SnakeMulti1.png" alt="Snake medium">
+                      </div>
+                      <div class="carousel-item">
+                        <img class="d-block w-100" src="vorschaubilder/SnakeMulti2.png" alt="Snake big">
+                      </div>
                     </div>
                   </div>
-                </div>
-              </section>
+                </section>
 
-              <p>Lust auf das Spiel Snake zu zweit? Dein Ziel ist es schneller zu sein als dein Gegner.</p>
+                <p>Lust auf das Spiel Snake zu zweit? Dein Ziel ist es schneller zu sein als dein Gegner.</p>
 
-            </div>
+              </div>
+            </a>
 
           </div>
         </div>
